fix: fix articles listing pages to let it aligned at center

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,7 +56,7 @@
   }
 
   .list-page {
-    @apply px-4 mx-4 mt-6;
+    @apply mx-4 mt-6;
     color: var(--color-readme);
   }
 }
